# xips-pt-desktop

./: .gitignore  LICENSE.md  README.md  package-lock.json  package.json  plan.md  run-xips-pt-desktop-windows.bat  tsconfig.base.json
.github/workflows/: build-desktop.yml  ci.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: app_state.rs  main.rs
apps/desktop/src-tauri/src/commands/: desktop.rs
apps/desktop/src-tauri/src/db/: mod.rs
apps/desktop/src-tauri/src/db/migrations/: 0001_initial.sql
apps/desktop/src-tauri/src/models/: api.rs  local_state.rs  mod.rs
apps/desktop/src-tauri/src/services/: api_client.rs  background_queue.rs  file_watcher.rs  mod.rs  scanner.rs  storage.rs
apps/desktop/src/app/: App.tsx  DesktopContext.tsx  components.tsx  desktop-client.ts  detection.test.ts  pages.tsx  styles.css  theme.ts
docs/redesign-sprint/: phase-1-information-architecture-and-shell.md  phase-2-onboarding-redesign.md  phase-3-today-page-redesign.md  phase-4-queue-workspace-redesign.md  phase-5-automation-workflow-redesign.md  phase-6-settings-and-diagnostics-cleanup.md  phase-7-visual-system-refresh.md
